<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidProPoints</string>
    <string name="protein">Protein</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="fat">Fat</string>
    <string name="fibers">Fibers</string>
    <string name="valuesPer">values per</string>
    <string name="serving">Serving</string>
    <string name="calculator">Calculator</string>
    <string name="database">Database</string>
    <string name="calc">Calc</string>
</resources>