<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:fadingEdge="none">
	<LinearLayout
	    android:id="@+id/LinearLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" >
	
	    <LinearLayout
	        android:id="@+id/LinearLayout01"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView01"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/protein"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <EditText
	            android:id="@+id/editTextProtein"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="29dp"
	            android:layout_weight="1"
	            android:inputType="numberDecimal" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/LinearLayout02"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView02"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/carbohydrate"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <EditText
	            android:id="@+id/editTextCarbohydrate"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="29dp"
	            android:layout_weight="1"
	            android:inputType="numberDecimal" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/LinearLayout03"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView03"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/fat"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <EditText
	            android:id="@+id/editTextFat"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="29dp"
	            android:layout_weight="1"
	            android:inputType="numberDecimal" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/LinearLayout04"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView04"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/fibers"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <EditText
	            android:id="@+id/editTextFibers"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="29dp"
	            android:layout_weight="1"
	            android:inputType="numberDecimal" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/LinearLayout05"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView05"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/valuesPer"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <EditText
	            android:id="@+id/editTextPer"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="29dp"
	            android:layout_weight="1"
	            android:inputType="numberDecimal"
	            android:text="100" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/LinearLayout06"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView06"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/serving"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <EditText
	            android:id="@+id/editTextServing"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="29dp"
	            android:layout_weight="1"
	            android:inputType="numberDecimal"
	            android:text="100" >
	
	            <requestFocus />
	        </EditText>
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/textViewPPResult"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginRight="15dip"
	        android:text="0.0"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="#ff0000" />
	    
	</LinearLayout>
	
</ScrollView>
